fix dark mode key

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -17,6 +17,7 @@
   --color-present: #B59F3B;
   --color-correct: #538D4E;
   --color-key: #818384;
+  --color-key-text: white;
 }
 
 .light {
